--- a/style.css
+++ b/style.css
@@ -251,6 +251,7 @@
   }
   .product-info {
     display: flex;
+    flex-direction: row-reverse;
     justify-content: space-between;
     align-items: center;
     margin-top: 12px;
@@ -280,8 +281,12 @@
     width: 360px;
     padding-bottom: 24px;
     position: absolute;
-    right: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background: var(--white);
+    border-radius: 20px 20px 20px 20px;
+    margin-top: 80px;
   }
   .product-detail-close {
     background: var(--white);
@@ -301,7 +306,7 @@
     width: 100%;
     height: 360px;
     object-fit: cover;
-    border-radius: 0 0 20px 20px;
+    border-radius: 20px 20px 20px 20px;
   }
   .product-info-second {
     margin: 24px 24px 0 24px;
